fastapi/fargate/cdk/cdk.out/FastAPIStack.template.json
{
 "Resources": {
  "MyVPCAFB07A31": {
   "Type": "AWS::EC2::VPC",
   "Properties": {
    "CidrBlock": "10.0.0.0/16",
    "EnableDnsHostnames": true,
    "EnableDnsSupport": true,
    "InstanceTenancy": "default",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/Resource"
   }
  },
  "MyVPCPublicSubnet1Subnet0C75866A": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.0.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/Subnet"
   }
  },
  "MyVPCPublicSubnet1RouteTable538A9511": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/RouteTable"
   }
  },
  "MyVPCPublicSubnet1RouteTableAssociation8A950D8E": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
    },
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/RouteTableAssociation"
   }
  },
  "MyVPCPublicSubnet1DefaultRouteAF81AA9B": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet1RouteTable538A9511"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "DependsOn": [
    "MyVPCVPCGWE6F260E1"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/DefaultRoute"
   }
  },
  "MyVPCPublicSubnet1EIP5EB6147D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/EIP"
   }
  },
  "MyVPCPublicSubnet1NATGateway838228A5": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVPCPublicSubnet1EIP5EB6147D",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet1"
     }
    ]
   },
   "DependsOn": [
    "MyVPCPublicSubnet1DefaultRouteAF81AA9B",
    "MyVPCPublicSubnet1RouteTableAssociation8A950D8E"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet1/NATGateway"
   }
  },
  "MyVPCPublicSubnet2Subnet4DDFF14C": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.64.0/18",
    "MapPublicIpOnLaunch": true,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Public"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Public"
     },
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/Subnet"
   }
  },
  "MyVPCPublicSubnet2RouteTableA6A1CD3D": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/RouteTable"
   }
  },
  "MyVPCPublicSubnet2RouteTableAssociationF22D63CA": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet2RouteTableA6A1CD3D"
    },
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet2Subnet4DDFF14C"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/RouteTableAssociation"
   }
  },
  "MyVPCPublicSubnet2DefaultRoute24460202": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPublicSubnet2RouteTableA6A1CD3D"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "GatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "DependsOn": [
    "MyVPCVPCGWE6F260E1"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/DefaultRoute"
   }
  },
  "MyVPCPublicSubnet2EIP6F364C5D": {
   "Type": "AWS::EC2::EIP",
   "Properties": {
    "Domain": "vpc",
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/EIP"
   }
  },
  "MyVPCPublicSubnet2NATGateway4D6E78B8": {
   "Type": "AWS::EC2::NatGateway",
   "Properties": {
    "SubnetId": {
     "Ref": "MyVPCPublicSubnet2Subnet4DDFF14C"
    },
    "AllocationId": {
     "Fn::GetAtt": [
      "MyVPCPublicSubnet2EIP6F364C5D",
      "AllocationId"
     ]
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PublicSubnet2"
     }
    ]
   },
   "DependsOn": [
    "MyVPCPublicSubnet2DefaultRoute24460202",
    "MyVPCPublicSubnet2RouteTableAssociationF22D63CA"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PublicSubnet2/NATGateway"
   }
  },
  "MyVPCPrivateSubnet1Subnet641543F4": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      0,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.128.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet1/Subnet"
   }
  },
  "MyVPCPrivateSubnet1RouteTable133BD901": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PrivateSubnet1"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet1/RouteTable"
   }
  },
  "MyVPCPrivateSubnet1RouteTableAssociation85DFBFBB": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
    },
    "SubnetId": {
     "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet1/RouteTableAssociation"
   }
  },
  "MyVPCPrivateSubnet1DefaultRouteA8EE6636": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet1RouteTable133BD901"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVPCPublicSubnet1NATGateway838228A5"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet1/DefaultRoute"
   }
  },
  "MyVPCPrivateSubnet2SubnetA420D3F0": {
   "Type": "AWS::EC2::Subnet",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "AvailabilityZone": {
     "Fn::Select": [
      1,
      {
       "Fn::GetAZs": ""
      }
     ]
    },
    "CidrBlock": "10.0.192.0/18",
    "MapPublicIpOnLaunch": false,
    "Tags": [
     {
      "Key": "aws-cdk:subnet-name",
      "Value": "Private"
     },
     {
      "Key": "aws-cdk:subnet-type",
      "Value": "Private"
     },
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet2/Subnet"
   }
  },
  "MyVPCPrivateSubnet2RouteTableDF3CB76C": {
   "Type": "AWS::EC2::RouteTable",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC/PrivateSubnet2"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet2/RouteTable"
   }
  },
  "MyVPCPrivateSubnet2RouteTableAssociationC373B6FE": {
   "Type": "AWS::EC2::SubnetRouteTableAssociation",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet2RouteTableDF3CB76C"
    },
    "SubnetId": {
     "Ref": "MyVPCPrivateSubnet2SubnetA420D3F0"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet2/RouteTableAssociation"
   }
  },
  "MyVPCPrivateSubnet2DefaultRoute37F90B5D": {
   "Type": "AWS::EC2::Route",
   "Properties": {
    "RouteTableId": {
     "Ref": "MyVPCPrivateSubnet2RouteTableDF3CB76C"
    },
    "DestinationCidrBlock": "0.0.0.0/0",
    "NatGatewayId": {
     "Ref": "MyVPCPublicSubnet2NATGateway4D6E78B8"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/PrivateSubnet2/DefaultRoute"
   }
  },
  "MyVPCIGW30AB6DD6": {
   "Type": "AWS::EC2::InternetGateway",
   "Properties": {
    "Tags": [
     {
      "Key": "Name",
      "Value": "FastAPIStack/MyVPC"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/IGW"
   }
  },
  "MyVPCVPCGWE6F260E1": {
   "Type": "AWS::EC2::VPCGatewayAttachment",
   "Properties": {
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    },
    "InternetGatewayId": {
     "Ref": "MyVPCIGW30AB6DD6"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyVPC/VPCGW"
   }
  },
  "MyECSClusterED5822D9": {
   "Type": "AWS::ECS::Cluster",
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/MyECSCluster/Resource"
   }
  },
  "FastAPIServiceLB2CD40511": {
   "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
   "Properties": {
    "LoadBalancerAttributes": [
     {
      "Key": "deletion_protection.enabled",
      "Value": "false"
     }
    ],
    "Scheme": "internet-facing",
    "SecurityGroups": [
     {
      "Fn::GetAtt": [
       "FastAPIServiceLBSecurityGroup5FC5E423",
       "GroupId"
      ]
     }
    ],
    "Subnets": [
     {
      "Ref": "MyVPCPublicSubnet1Subnet0C75866A"
     },
     {
      "Ref": "MyVPCPublicSubnet2Subnet4DDFF14C"
     }
    ],
    "Type": "application"
   },
   "DependsOn": [
    "MyVPCPublicSubnet1DefaultRouteAF81AA9B",
    "MyVPCPublicSubnet1RouteTableAssociation8A950D8E",
    "MyVPCPublicSubnet2DefaultRoute24460202",
    "MyVPCPublicSubnet2RouteTableAssociationF22D63CA"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/LB/Resource"
   }
  },
  "FastAPIServiceLBSecurityGroup5FC5E423": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "Automatically created Security Group for ELB FastAPIStackFastAPIServiceLBF078EDE9",
    "SecurityGroupIngress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow from anyone on port 80",
      "FromPort": 80,
      "IpProtocol": "tcp",
      "ToPort": 80
     }
    ],
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/LB/SecurityGroup/Resource"
   }
  },
  "FastAPIServiceLBSecurityGrouptoFastAPIStackFastAPIServiceSecurityGroupC82770A580B25E0CD3": {
   "Type": "AWS::EC2::SecurityGroupEgress",
   "Properties": {
    "GroupId": {
     "Fn::GetAtt": [
      "FastAPIServiceLBSecurityGroup5FC5E423",
      "GroupId"
     ]
    },
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "DestinationSecurityGroupId": {
     "Fn::GetAtt": [
      "FastAPIServiceSecurityGroupD8460CA8",
      "GroupId"
     ]
    },
    "FromPort": 80,
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/LB/SecurityGroup/to FastAPIStackFastAPIServiceSecurityGroupC82770A5:80"
   }
  },
  "FastAPIServiceLBPublicListenerBC9625AB": {
   "Type": "AWS::ElasticLoadBalancingV2::Listener",
   "Properties": {
    "DefaultActions": [
     {
      "TargetGroupArn": {
       "Ref": "FastAPIServiceLBPublicListenerECSGroup995F0CD4"
      },
      "Type": "forward"
     }
    ],
    "LoadBalancerArn": {
     "Ref": "FastAPIServiceLB2CD40511"
    },
    "Port": 80,
    "Protocol": "HTTP"
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/LB/PublicListener/Resource"
   }
  },
  "FastAPIServiceLBPublicListenerECSGroup995F0CD4": {
   "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
   "Properties": {
    "Port": 80,
    "Protocol": "HTTP",
    "TargetGroupAttributes": [
     {
      "Key": "stickiness.enabled",
      "Value": "false"
     }
    ],
    "TargetType": "ip",
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/LB/PublicListener/ECSGroup/Resource"
   }
  },
  "FastAPIServiceTaskDefTaskRole8718E5C3": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/TaskDef/TaskRole/Resource"
   }
  },
  "FastAPIServiceTaskDefB3311479": {
   "Type": "AWS::ECS::TaskDefinition",
   "Properties": {
    "ContainerDefinitions": [
     {
      "Essential": true,
      "Image": {
       "Fn::Sub": "${AWS::AccountId}.dkr.ecr.${AWS::Region}.${AWS::URLSuffix}/cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}:9874b44cf06cdc99926ca9b3b0ecc359e72544f3793d8f3ab71dd897bd3e4a81"
      },
      "LogConfiguration": {
       "LogDriver": "awslogs",
       "Options": {
        "awslogs-group": {
         "Ref": "FastAPIServiceTaskDefwebLogGroup251CFE0D"
        },
        "awslogs-stream-prefix": "FastAPIService",
        "awslogs-region": {
         "Ref": "AWS::Region"
        }
       }
      },
      "Name": "web",
      "PortMappings": [
       {
        "ContainerPort": 80,
        "Protocol": "tcp"
       }
      ]
     }
    ],
    "Cpu": "256",
    "ExecutionRoleArn": {
     "Fn::GetAtt": [
      "FastAPIServiceTaskDefExecutionRole14456B9D",
      "Arn"
     ]
    },
    "Family": "FastAPIStackFastAPIServiceTaskDef6272EB07",
    "Memory": "512",
    "NetworkMode": "awsvpc",
    "RequiresCompatibilities": [
     "FARGATE"
    ],
    "TaskRoleArn": {
     "Fn::GetAtt": [
      "FastAPIServiceTaskDefTaskRole8718E5C3",
      "Arn"
     ]
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/TaskDef/Resource"
   }
  },
  "FastAPIServiceTaskDefwebLogGroup251CFE0D": {
   "Type": "AWS::Logs::LogGroup",
   "UpdateReplacePolicy": "Retain",
   "DeletionPolicy": "Retain",
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/TaskDef/web/LogGroup/Resource"
   }
  },
  "FastAPIServiceTaskDefExecutionRole14456B9D": {
   "Type": "AWS::IAM::Role",
   "Properties": {
    "AssumeRolePolicyDocument": {
     "Statement": [
      {
       "Action": "sts:AssumeRole",
       "Effect": "Allow",
       "Principal": {
        "Service": "ecs-tasks.amazonaws.com"
       }
      }
     ],
     "Version": "2012-10-17"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/TaskDef/ExecutionRole/Resource"
   }
  },
  "FastAPIServiceTaskDefExecutionRoleDefaultPolicyE5B34729": {
   "Type": "AWS::IAM::Policy",
   "Properties": {
    "PolicyDocument": {
     "Statement": [
      {
       "Action": [
        "ecr:BatchCheckLayerAvailability",
        "ecr:GetDownloadUrlForLayer",
        "ecr:BatchGetImage"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::Join": [
         "",
         [
          "arn:",
          {
           "Ref": "AWS::Partition"
          },
          ":ecr:",
          {
           "Ref": "AWS::Region"
          },
          ":",
          {
           "Ref": "AWS::AccountId"
          },
          ":repository/",
          {
           "Fn::Sub": "cdk-hnb659fds-container-assets-${AWS::AccountId}-${AWS::Region}"
          }
         ]
        ]
       }
      },
      {
       "Action": "ecr:GetAuthorizationToken",
       "Effect": "Allow",
       "Resource": "*"
      },
      {
       "Action": [
        "logs:CreateLogStream",
        "logs:PutLogEvents"
       ],
       "Effect": "Allow",
       "Resource": {
        "Fn::GetAtt": [
         "FastAPIServiceTaskDefwebLogGroup251CFE0D",
         "Arn"
        ]
       }
      }
     ],
     "Version": "2012-10-17"
    },
    "PolicyName": "FastAPIServiceTaskDefExecutionRoleDefaultPolicyE5B34729",
    "Roles": [
     {
      "Ref": "FastAPIServiceTaskDefExecutionRole14456B9D"
     }
    ]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/TaskDef/ExecutionRole/DefaultPolicy/Resource"
   }
  },
  "FastAPIService91BC898F": {
   "Type": "AWS::ECS::Service",
   "Properties": {
    "Cluster": {
     "Ref": "MyECSClusterED5822D9"
    },
    "DeploymentConfiguration": {
     "MaximumPercent": 200,
     "MinimumHealthyPercent": 50
    },
    "DesiredCount": 2,
    "EnableECSManagedTags": false,
    "HealthCheckGracePeriodSeconds": 60,
    "LaunchType": "FARGATE",
    "LoadBalancers": [
     {
      "ContainerName": "web",
      "ContainerPort": 80,
      "TargetGroupArn": {
       "Ref": "FastAPIServiceLBPublicListenerECSGroup995F0CD4"
      }
     }
    ],
    "NetworkConfiguration": {
     "AwsvpcConfiguration": {
      "AssignPublicIp": "DISABLED",
      "SecurityGroups": [
       {
        "Fn::GetAtt": [
         "FastAPIServiceSecurityGroupD8460CA8",
         "GroupId"
        ]
       }
      ],
      "Subnets": [
       {
        "Ref": "MyVPCPrivateSubnet1Subnet641543F4"
       },
       {
        "Ref": "MyVPCPrivateSubnet2SubnetA420D3F0"
       }
      ]
     }
    },
    "TaskDefinition": {
     "Ref": "FastAPIServiceTaskDefB3311479"
    }
   },
   "DependsOn": [
    "FastAPIServiceLBPublicListenerECSGroup995F0CD4",
    "FastAPIServiceLBPublicListenerBC9625AB"
   ],
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/Service/Service"
   }
  },
  "FastAPIServiceSecurityGroupD8460CA8": {
   "Type": "AWS::EC2::SecurityGroup",
   "Properties": {
    "GroupDescription": "FastAPIStack/FastAPIService/Service/SecurityGroup",
    "SecurityGroupEgress": [
     {
      "CidrIp": "0.0.0.0/0",
      "Description": "Allow all outbound traffic by default",
      "IpProtocol": "-1"
     }
    ],
    "VpcId": {
     "Ref": "MyVPCAFB07A31"
    }
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/Service/SecurityGroup/Resource"
   }
  },
  "FastAPIServiceSecurityGroupfromFastAPIStackFastAPIServiceLBSecurityGroup2919ECC38000D934D5": {
   "Type": "AWS::EC2::SecurityGroupIngress",
   "Properties": {
    "IpProtocol": "tcp",
    "Description": "Load balancer to target",
    "FromPort": 80,
    "GroupId": {
     "Fn::GetAtt": [
      "FastAPIServiceSecurityGroupD8460CA8",
      "GroupId"
     ]
    },
    "SourceSecurityGroupId": {
     "Fn::GetAtt": [
      "FastAPIServiceLBSecurityGroup5FC5E423",
      "GroupId"
     ]
    },
    "ToPort": 80
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/FastAPIService/Service/SecurityGroup/from FastAPIStackFastAPIServiceLBSecurityGroup2919ECC3:80"
   }
  },
  "CDKMetadata": {
   "Type": "AWS::CDK::Metadata",
   "Properties": {
    "Analytics": "v2:deflate64:H4sIAAAAAAAA/31S207DMAz9Ft6zcBMSr2NcNAlB1SFeJzczxaxLqsQZmqr+O266sjIQTzk+OY7t41zoq0t9dgKfYWJW60lFhW4WDGathFo2aC5081obNXuzr9lMZbGoyCxiYZE77oByFxlfoKjwwB+4aQjOEDA5+y3uwN08644n4Adg/ISdyjxtBR4enltGL3gQ9J3soylLr+8btKwWaKIn3j14F+vUw7/EXekxhF/03Ca+VWiCbmZVDFK9Uw3wHnwJ3VRhfYtvZGmY6ZhxloEs+hG3z12g35LpfephKresgbtRg57Wtbic3Hp0sLqBCqzB1VE6VhCYTCWKIinIlltZ19/ZaYgf8VhHMpvdawY8un+RyrKBwchR2CqCjW5y1+89nZmTvLSoHnXT+SWEgBz0rTNr9PMNlN2nkBXLnc6xdoHY+d0NBFSVK8X8R1d+Vxxw26ocg4u+t+85ch1Zp [...]
   },
   "Metadata": {
    "aws:cdk:path": "FastAPIStack/CDKMetadata/Default"
   },
   "Condition": "CDKMetadataAvailable"
  }
 },
 "Outputs": {
  "FastAPIServiceLoadBalancerDNS3819B8B2": {
   "Value": {
    "Fn::GetAtt": [
     "FastAPIServiceLB2CD40511",
     "DNSName"
    ]
   }
  },
  "FastAPIServiceServiceURLD15E423E": {
   "Value": {
    "Fn::Join": [
     "",
     [
      "http://",
      {
       "Fn::GetAtt": [
        "FastAPIServiceLB2CD40511",
        "DNSName"
       ]
      }
     ]
    ]
   }
  }
 },
 "Conditions": {
  "CDKMetadataAvailable": {
   "Fn::Or": [
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "af-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-northeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ap-southeast-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "ca-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "cn-northwest-1"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-central-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-north-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-2"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "eu-west-3"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "me-south-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "sa-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-east-2"
       ]
      }
     ]
    },
    {
     "Fn::Or": [
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-1"
       ]
      },
      {
       "Fn::Equals": [
        {
         "Ref": "AWS::Region"
        },
        "us-west-2"
       ]
      }
     ]
    }
   ]
  }
 },
 "Parameters": {
  "BootstrapVersion": {
   "Type": "AWS::SSM::Parameter::Value<String>",
   "Default": "/cdk-bootstrap/hnb659fds/version",
   "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
  }
 },
 "Rules": {
  "CheckBootstrapVersion": {
   "Assertions": [
    {
     "Assert": {
      "Fn::Not": [
       {
        "Fn::Contains": [
         [
          "1",
          "2",
          "3",
          "4",
          "5"
         ],
         {
          "Ref": "BootstrapVersion"
         }
        ]
       }
      ]
     },
     "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
    }
   ]
  }
 }
}
